# models/postModel.js
@@ -18,10 +18,6 @@ const postsSchema = new mongoose.Schema({
     type: mongoose.Schema.ObjectId,
     ref: 'user',
   }],
-  comments: [{
-    type: mongoose.Schema.ObjectId,
-    ref: 'comment',
-  }],
   createAt: {
     type: Date,
     default: Date.now,
