# swagger-output.json
@@ -52,38 +52,86 @@
                   "example": true
                 },
                 "data": {
-                  "type": "object",
-                  "properties": {
-                    "_id": {
-                      "type": "string",
-                      "example": ""
-                    },
-                    "userId": {
-                      "type": "object",
-                      "properties": {
-                        "_id": {
-                          "type": "string",
-                          "example": ""
-                        },
-                        "name": {
-                          "type": "string",
-                          "example": ""
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "example": "628a0aea9acb6cb7d6b70d93"
+                      },
+                      "userId": {
+                        "type": "array",
+                        "items": {
+                          "type": "object",
+                          "properties": {
+                            "_id": {
+                              "type": "string",
+                              "example": "6286d9983208cb01aafaa562"
+                            },
+                            "name": {
+                              "type": "string",
+                              "example": "Meme"
+                            }
+                          }
+                        }
+                      },
+                      "content": {
+                        "type": "string",
+                        "example": "我只是個測試唷!"
+                      },
+                      "likes": {
+                        "type": "array",
+                        "example": [],
+                        "items": {}
+                      },
+                      "image": {
+                        "type": "array",
+                        "example": [],
+                        "items": {}
+                      },
+                      "createAt": {
+                        "type": "string",
+                        "example": "2022-05-22T10:05:30.803Z"
+                      },
+                      "comments": {
+                        "type": "array",
+                        "items": {
+                          "type": "object",
+                          "properties": {
+                            "_id": {
+                              "type": "string",
+                              "example": "628a0c029acb6cb7d6b70da2"
+                            },
+                            "content": {
+                              "type": "string",
+                              "example": "我只是個測試唷 - 回應3"
+                            },
+                            "postId": {
+                              "type": "string",
+                              "example": "628a0aea9acb6cb7d6b70d93"
+                            },
+                            "userId": {
+                              "type": "string",
+                              "example": "6286d9983208cb01aafaa562"
+                            },
+                            "createAt": {
+                              "type": "string",
+                              "example": "2022-05-22T10:10:10.792Z"
+                            },
+                            "actions": {
+                              "type": "array",
+                              "example": [
+                                "edit",
+                                "delete"
+                              ],
+                              "items": {
+                                "type": "string"
+                              }
+                            }
+                          }
                         }
                       }
-                    },
-                    "content": {
-                      "type": "string",
-                      "example": ""
-                    },
-                    "imgage": {
-                      "type": "array",
-                      "example": [],
-                      "items": {}
-                    },
-                    "likes": {
-                      "type": "array",
-                      "example": [],
-                      "items": {}
                     }
                   }
                 }
@@ -1101,6 +1149,346 @@
             "description": "OK"
           }
         }
+      }
+    },
+    "/comment/{postId}": {
+      "get": {
+        "tags": [
+          "Comments"
+        ],
+        "summary": "取得留言",
+        "description": "如為登入狀態，回傳指定文章ID的留言",
+        "parameters": [
+          {
+            "name": "postId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "文章ID"
+          },
+          {
+            "name": "start",
+            "in": "query",
+            "description": "起始資料，ex: start=2，從第三筆comments到最後一筆",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "一次拿幾筆資料",
+            "type": "string"
+          },
+          {
+            "name": "timeSort",
+            "in": "query",
+            "description": "timeSort=asc (舊到新) or (新到舊)",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "取得貼文資料",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "example": "628a0c089acb6cb7d6b70da6"
+                      },
+                      "content": {
+                        "type": "string",
+                        "example": "我只是個測試唷 - 回應4"
+                      },
+                      "postId": {
+                        "type": "string",
+                        "example": "628a0aea9acb6cb7d6b70d93"
+                      },
+                      "userId": {
+                        "type": "object",
+                        "properties": {
+                          "_id": {
+                            "type": "string",
+                            "example": "6286d9983208cb01aafaa562"
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "Meme"
+                          }
+                        }
+                      },
+                      "createAt": {
+                        "type": "string",
+                        "example": "2022-05-22T10:10:16.925Z"
+                      },
+                      "actions": {
+                        "type": "array",
+                        "example": [
+                          "delete",
+                          "edit"
+                        ],
+                        "items": {
+                          "type": "string"
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "回傳錯誤訊息",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "fail"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "錯誤訊息"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "Comments"
+        ],
+        "summary": "新增留言",
+        "description": "登入狀態，並且有文章ID 才可以新增留言",
+        "parameters": [
+          {
+            "name": "postId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "文章ID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "回傳新增的留言",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "content": {
+                      "type": "string",
+                      "example": "我只是個測試唷 - 回應4"
+                    },
+                    "postId": {
+                      "type": "string",
+                      "example": "628a0aea9acb6cb7d6b70d93"
+                    },
+                    "userId": {
+                      "type": "object",
+                      "properties": {
+                        "_id": {
+                          "type": "string",
+                          "example": "6286d9983208cb01aafaa562"
+                        },
+                        "name": {
+                          "type": "string",
+                          "example": "Meme"
+                        },
+                        "isLogin": {
+                          "type": "boolean",
+                          "example": true
+                        },
+                        "createdAt": {
+                          "type": "string",
+                          "example": "2022-05-19T23:58:16.938Z"
+                        },
+                        "chatRecord": {
+                          "type": "array",
+                          "example": [],
+                          "items": {}
+                        }
+                      }
+                    },
+                    "_id": {
+                      "type": "string",
+                      "example": "628a0c089acb6cb7d6b70da6"
+                    },
+                    "createAt": {
+                      "type": "string",
+                      "example": "2022-05-22T10:10:16.925Z"
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "回傳錯誤訊息",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "message": {
+                  "type": "string",
+                  "example": "錯誤訊息"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/comment/{commentId}": {
+      "patch": {
+        "tags": [
+          "Comments"
+        ],
+        "summary": "修改留言",
+        "description": "如為登入狀態，且為留言的擁有者，才可以修改留言",
+        "parameters": [
+          {
+            "name": "commentId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "留言ID"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "留言內容",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "content": {
+                  "type": "string",
+                  "example": "更新的留言"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "修改後的comment",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "example": "6289f7048311166ba6134a0f"
+                    },
+                    "content": {
+                      "type": "string",
+                      "example": "測試1 - 修改過了唷!!!"
+                    },
+                    "postId": {
+                      "type": "string",
+                      "example": "62897d87b523932b81580581"
+                    },
+                    "userId": {
+                      "type": "string",
+                      "example": "6286d9983208cb01aafaa562"
+                    },
+                    "createAt": {
+                      "type": "string",
+                      "example": "2022-05-22T08:40:36.456Z"
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "回傳錯誤訊息",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "fail"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "錯誤訊息"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/comment/delete/{commentId}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "commentId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
       }
     }
   }
